test/cli/test-deleting-policy/exclude-resource-rules/resource.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: keep-me
  namespace: default
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: keep-me-too
  namespace: default
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: delete-me
  namespace: default
