test/cli/test-deleting-policy/exclude-resource-rules/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test
policies:
- policy.yaml
resources:
- resource.yaml
results:
- isDeletingPolicy: true
  kind: ConfigMap
  policy: cleanup-configmaps
  resources:
  - delete-me
  result: pass
- isDeletingPolicy: true
  kind: ConfigMap
  policy: cleanup-configmaps
  resources:
  - keep-me
  - keep-me-too
  result: skip
